# simplifier

./: GAME_TEST  GAME_TEST_PUNCT_FIX  LICENSE  README.md  baseline.py  cleantestresult.py  dataloader.py  easse_report.html  gametexts.json  pyproject.toml  requirements.txt  rl_model.py  test.py  testresult.jsonl  testset.json  testtextmaker.py  train.py
.devcontainer/: devcontainer.json
data/asset-main/dataset/: asset.valid.simp.10
easse reports/: easse_report no punct fix.html  easse_report.html
gyms/: setup.py
gyms/gyms/: __init__.py
gyms/gyms.egg-info/: PKG-INFO  SOURCES.txt
gyms/gyms/envs/: __init__.py  text_world.py
runs/gyms/TextWorld-v0__test__1__1670076896/: events.out.tfevents.1670076896.Toms-Air.fios-router.home.13792.0
runs/gyms/TextWorld-v0__test__1__1670077055/: events.out.tfevents.1670077055.Toms-Air.fios-router.home.13859.0
runs/gyms/TextWorld-v0__test__1__1670077203/: events.out.tfevents.1670077203.Toms-Air.fios-router.home.13916.0
runs/gyms/TextWorld-v0__test__1__1670078292/: events.out.tfevents.1670078292.Toms-Air.fios-router.home.14339.0
runs/gyms/TextWorld-v0__test__1__1670078332/: events.out.tfevents.1670078332.Toms-Air.fios-router.home.14365.0
runs/gyms/TextWorld-v0__test__1__1670078405/: events.out.tfevents.1670078405.Toms-Air.fios-router.home.14472.0
wandb/: latest-run
wandb/run-20221125_075600-2acifln8/: run-2acifln8.wandb
wandb/run-20221125_075600-2acifln8/files/: config.yaml  diff.patch  (+2 more)
wandb/run-20221125_075628-1dlvi6zw/: run-1dlvi6zw.wandb
wandb/run-20221125_082505-1nibax46/: run-1nibax46.wandb
(+22 files in other folders)
